--- a/Style/homee.css
+++ b/Style/homee.css
@@ -52,6 +52,7 @@ header {
     text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
 
+/* Navbar Styles */
 nav ul {
     display: flex;
     list-style: none;
@@ -70,7 +71,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 nav ul li a i {
